# MongoDB_study

./: .env  .gitignore  Makefile  pyproject.toml  setup.cfg
api/: app.py
api/schemas/: common.py  order.py  product.py  user.py
api/views/: orders.py  products.py  users.py
db/: client.py  models.py  settings.py
repositories/: common.py  orders.py  products.py  users.py
services/: common.py  orders.py  products.py  services.py  users.py
tests/: conftest.py  test_api.py  test_repositories.py
tests/repositories/: test_orders.py  test_products.py  test_repositories.py  test_users.py
tests/views/: conftest.py  test_api.py
