[tool.poetry]
name = "mongodb-ctrl"
version = "0.1.0"
description = ""
authors = ["Сергей Сушков <sushkov_sv@ursip.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
wheel = "^0.41.2"
pydantic-settings = "^2.0.3"
pymongo = "^4.5.0"
pytest = "^7.4.2"
uuid = "^1.30"
faker = "^19.10.0"
autoflake = "^2.2.1"
isort = "^5.12.0"
black = "^23.9.1"
unify = "^0.5"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
